--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 [Ll]ogs/
 [Mm]emoryCaptures/
 /Assets/AssetStoreTools*
-
+/Assets/ParrelSync*
+Snops_clone_*
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
@@ -58,4 +59,3 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
